app/hello-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hello
spec:
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello from $(NODE_NAME) ! Ingress NGINX bien configuré, chef !"
          ports:
            - containerPort: 5678
