app/service_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-deploy
  name: nginx-deploy
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deploy
  type: NodePort
status:
  loadBalancer: {}
