app/monitoring-ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.local`)
      kind: Rule
      services:
        - name: kube-prometheus-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.local`)
      kind: Rule
      services:
        - name: kube-prometheus-kube-prom-prometheus
          port: 9090
